# jira-worklog-gui

./: .gitignore  AGENTS.md  README.md  app.py  config_store.py  jira_service.py  pyproject.toml
docs/: AGENT_CONTEXT.md
docs/superpowers/plans/: 2026-07-01-jira-worklog-gui-tweaks.md  2026-07-03-vendor-upstream-jira-lib.md
docs/superpowers/specs/: 2026-07-01-jira-worklog-gui-tweaks-design.md
src/jira_worklog_gui/: __init__.py  __main__.py  app.py  jira_service.py
src/jira_worklog_gui/_vendor/: __init__.py
src/jira_worklog_gui/_vendor/common/: __init__.py  decorators.py
src/jira_worklog_gui/_vendor/jira/: __init__.py  utils.py
src/jira_worklog_gui/_vendor/jira/connection/: __init__.py  _decorators.py  _issue_ops.py  _metadata.py  _plugin.py  _worklog_write.py  client.py  exceptions.py
src/jira_worklog_gui/_vendor/jira/query/: __init__.py  search.py  user_activity.py
src/jira_worklog_gui/views/: __init__.py
tests/: test_duration.py  test_jira_service.py  test_vendor_smoke.py
views/: credentials_view.py  log_entry.py  task_summary.py  today_log.py
widgets/: __init__.py  duration_entry.py
